--- a/demo/expand health/v2/views/classes.html
+++ b/demo/expand health/v2/views/classes.html
@@ -2696,7 +2696,7 @@
       submitBtn.disabled = true;
 
       try {
-        await apiRequest('/api/classes/scheduled', {
+        await apiRequest('/api/classes', {
           method: 'POST',
           body: JSON.stringify(classData)
         });
