Fix classes not showing: remove early loadClasses call before variables initialized
The loadClasses() function was being called in the first DOMContentLoaded
listener before currentDate and currentView variables were initialized.
This caused the date range calculation to fail. Removed this call since
updateCurrentView() properly calls loadClasses() after initialization.

--- a/demo/expand health/v2/views/classes.html
+++ b/demo/expand health/v2/views/classes.html
@@ -2128,7 +2128,7 @@
       await loadStaff();
       await loadLocations();
       await loadClassTemplates();
-      loadClasses();
+      // Note: loadClasses() is called by updateCurrentView() after calendar variables are initialized
       setupEventListeners();
     });
 
